Fix alignment

--- a/src/screens/Artists/Artists.module.css
+++ b/src/screens/Artists/Artists.module.css
@@ -53,6 +53,7 @@
 
 .itemText {
   width: 100%;
+  text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
